# compare_abstracts

./: .gitignore  README.md  pyproject.toml  requirements.txt
backup/0.2.7/tui/: __init__.py  last_update.txt  support.py
backup/0.2.8/tui/: __main__.py  last_update.txt  support.py  workflow.drawio
backup/0.3.0/tui/: __init__.py  support.py  utils.py
backup/0.3.2/tui/: utils.py
backup/tui/: __init__.py  support.py  utils.py  widgets.py
data/: arxiv_cat.json
data/conferences/: 2017_AISTATS.json  2017_COLT.json  2018_AISTATS.json  2018_COLT.json  2019_2019_AISTATS.json  2019_2019_COLT.json  2019_2019_ML4H.json  2019_AISTATS.json  2019_COLT.json  2019_ML4H.json  2020_AISTATS.json  2020_COLT.json  2020_ICLR.json  2020_ICML.json  2020_ML4H.json  2021_AISTATS.json  2021_COLT.json  2021_ICLR.json  2021_ICML.json  2021_ML4H.json  2022_AISTATS.json  2022_CHIL.json  2022_COLT.json  2022_ICLR.json  2023_AAAI.json  2023_AISTATS.json  2023_COLT.json  2024_AISTATS.json  2024_CHIL.json  2024_COLT.json  2024_ML4H.json
data/scraped/: 2020_ICLR.json  2020_ICML.json  2021_ICLR.json  2021_ICML.json  2021_icml.json  2022_ICLR.json
data/searches/: Fuzzy_title_multivariate.json
scripts/: explore.py  quick_fix.py  scrape_abstracts.py  support.py
tui/: __init__.py  __main__.py  support.py  utils.py  widgets.py  workflow.drawio
tui/css/: layout.tcss
tui/examples/: example1.py  example2.py  example3.py
