[project]
name = "paper-search"
version = "0.1.1"
description = "For comparing ML papers from major conferences"
authors = [
    {name = "Landcruiser87",email = "andyheroy@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "textual (>=2.1.2,<3.0.0)",
    "pyzotero (>=1.6.11,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
textual-dev = "^1.7.0"

